2010-07-22  David Reveman  <davidr@novell.com>

	* uielement.h:
	* uielement.cpp:
	* textblock.cpp (ComputeBounds):
	* stylus.cpp (ComputeBounds):
	* shape.cpp:
	* panel.cpp (ComputeBounds):
	* grid.cpp (ComputeBounds):
	* glyphs.cpp (ComputeBounds):
	* frameworkelement.h:
	* frameworkelement.cpp:
	* canvas.cpp (ComputeBounds): Add extents_with_children and
	adjust bounds computations to properly update extents for
	rendering to intermediate buffers. GetGlobalBounds now
	returns subtree bounds in parent coordinate space.

	* uielement.h:
	* uielement.cpp:
	* frameworkelement.h:
	* frameworkelement.cpp: Add GetSubtreeExtents function which
	returns un-clipped extents required when rendering to an
	intermediate buffer.

	* uielement.cpp (ComputeTransform): Always add affine
	transformation to perspective transformation when intermediate
	rendering is performed.

	* uielement.h:
	* uielement.cpp: Add local_projection for transforming local
	coordinates to parent coordinate space.

2010-07-22  Alan McGovern  <amcgovern@novell.com>

	* eventargs.h: Always clone the Value* inside of
	  PropertyChangedEventArgs in case we want to emit a change
	  notification asynchronously. Previously if this was done,
	  old_value and new_value would point to freed memory.

2010-07-21  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp:
	* control.cpp:
	* deployment.h:
	* uielement.cpp:
	* deployment.cpp: Add a second method to emit loaded events
	  which does it synchronously. This is required for flushing
	  loaded events from the splash screen as if we do it
	  asynchronously, the events might not actually be able to
	  emit anymore if we set cross_domain_app to true in the
	  meantime. Change existing calls to EmitLoaded to use
	  EmitLoadedAsync.

2010-07-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: Correctly pass bool arguments to mono_runtime_invoke.

2010-07-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* security.h: Set correct object type in ctor.
